Corrige el texto de la sección de asientos en Index.html

--- a/Index.html
+++ b/Index.html
@@ -198,7 +198,7 @@
     <p class="section-text">
       Estamos encantados de que seas parte de este día especial. Para asegurarnos de que todos nuestros invitados se
       sientan cómodos, hemos reservado <b><span id="allowed-guests"> 1
-        </span></b>asientos en su honor. ¡Gracias por tu comprensión!
+        </span></b>asiento en su honor. ¡Gracias por tu comprensión!
     </p>
   </section>
 
